# micro_benchmarks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
heap_sort/: CMakeLists.txt  binary_heap.hpp  heap_sort.cpp
merge_sort/: CMakeLists.txt  merge_sort.cpp  serial.hpp
src/: process.pl
src/array/reverse/: README.md  plot.sh  reverse.cpp  reverse.hpp  reverse_test.cpp
src/array/seq_read_write/: README.md  plot.sh  read_write.cpp  run.sh
src/heap_sort/: heap_sort.cpp
src/matrix/: matrix.hpp  matrix_ops.hpp
src/matrix/copy/: README.md  copy.cpp  copy.hpp  copy_test.cpp  plot.sh
src/matrix/rotate/: README.md  plot.sh  process.pl  rotate.cpp  rotate.hpp  rotate_test.cpp  run.sh
src/matrix_row_max_1s/: matrix_row_max_1s.cpp
src/memory/read_write/: README.md  plot.sh  read_write.cpp  run.sh
src/merge_sort/: merge_sort.cpp  parallel.hpp
src/permutation_cycles/: permutation_cycles.cpp
src/sort/heap/: binary_heap.hpp  heap_sort.cpp
src/sort/merge/: merge_sort.cpp  parallel.hpp  serial.hpp
src/std/: unordered_set_construction.cpp
src/vector/bool/: bool_accumulate.cpp  bool_fill.cpp
src/vector/read_write/: log.txt  process.pl  read_write
src/vector/reverse/: reverse.cpp  reverse.hpp  reverse_test.cpp
src/vector/rotate/: rotate.cpp  rotate.hpp  rotate_test.cpp
