cmake_minimum_required (VERSION 3.13)
project(micro_benchmarks)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_FLAGS "-Wall -Wno-comment -Wno-switch -Werror=return-type -m64 -march=native")
set(CMAKE_CXX_FLAGS_DEBUG "-Wextra -O0 -g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -flto -DNDEBUG")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "Suppressing benchmark's tests" FORCE)
add_subdirectory(external/benchmark)
add_subdirectory(external/googletest/googletest)

set(TBB_BUILD_TESTS OFF CACHE BOOL "Build TBB tests and enable testing infrastructure" FORCE)
add_subdirectory(external/tbb)

set(MKL_LIB "$ENV{MKLROOT}/lib/intel64")
set(MKL_LIBRARIES "-Wl,--start-group" "${MKL_LIB}/libmkl_intel_ilp64.a" "${MKL_LIB}/libmkl_sequential.a" "${MKL_LIB}/libmkl_core.a" "-Wl,--end-group" pthread m dl)

file(GLOB_RECURSE SRC_FILES RELATIVE "${PROJECT_SOURCE_DIR}/src" "src/*.cpp" )
foreach(SRC_FILE ${SRC_FILES})
	get_filename_component(EXE_NAME ${SRC_FILE} NAME_WE)
	get_filename_component(DIR_NAME ${SRC_FILE} DIRECTORY)
	string(REPLACE "/" "_" TARGET_NAME "${DIR_NAME}/${EXE_NAME}")
	add_executable(${TARGET_NAME} "src/${SRC_FILE}")
	set_target_properties(${TARGET_NAME} PROPERTIES OUTPUT_NAME "${EXE_NAME}" RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/${DIR_NAME}")
	target_include_directories(${TARGET_NAME} PUBLIC "$ENV{MKLROOT}/include")
	target_compile_definitions(${TARGET_NAME} PUBLIC MKL_ILP64)
	target_link_directories(${TARGET_NAME} PUBLIC "${MKL_LIB}")
	target_link_libraries(${TARGET_NAME} gtest benchmark "${MKL_LIBRARIES}" tbb pthread)
endforeach()
